--- a/src/components/PageLayout.css
+++ b/src/components/PageLayout.css
@@ -42,7 +42,6 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   flex-grow: 1;
 }
